# longleaf

./: .envrc  .gitignore  .ocamlformat  CLAUDE.md  Makefile  Procfile  README.md  data.json  dune-project  dune-workspace  flake.nix  justfile  longleaf-lib.opam  longleaf-strategies.opam  longleaf.opam  longleaf.scm  main  manifest.scm  ocaml-ctypes.scm  packages.scm  plotly.ml  tacaml.scm
data/: README.md  christmas_break_live.json  da.json  december_2022.json  december_2023.json  december_spy_2024.json  download_Calculated_Meddler.json  download_Vision_Rapture.json  download_forcing_Dardistan  live_Conundrum_Idea.json  live_Wish_Grace.json  mo.json  november_spy_2024.json  start_december_2024.json  target.json  test_hexahydroxy_propagation  tiingo_2017.json  tiingo_december.json  tiingo_november.json
elisp/: top.el
gui/: template.eml.html
lib/: alpaca_backend.ml  alpaca_position.ml  astar.ml  backend.ml  backend.mli  backend_intf.ml  backend_position.ml  backend_position.mli  backtesting_backend.ml  bars.ml  bars.mli  contract.ml  data.ml  dune  environment.ml  error.ml  farmer.ml  fourier.ml  gui.ml  indicator_config.ml  indicators.ml  instrument.ml  item.ml  item.mli  latest.ml  llm.ml  longleaf.ml  longleaf_mutex.ml  lots_of_words.ml  manual.ml  market_data_api.ml  math.ml  monad_experiment.ml  monte_carlo.ml  options.ml  order.ml  order.mli  order_history.ml  order_id.ml  plotly.ml  (+20 more)
lib/apis/: client.ml  downloader.ml  dune  https.ml  market_data_api.ml  massive_api.ml  massive_websocket.ml  tiingo_api.ml  tiingo_websocket.ml  tools.ml  trading_api.ml  websocket.ml
lib/backend/: alpaca_backend.ml  backend.ml  backend.mli  backend_intf.ml  backtesting_backend.ml  dune  longleaf_backend.ml  strategy_utils.ml
lib/bars/: bars.ml  bars.mli  custom.ml  data.ml  data.mli  dune  latest.ml  longleaf_bars.ml  longleaf_bars.mli
lib/battery/: battery.ml  dune  longleaf_battery.ml
lib/core/: contract.ml  dune  environment.ml  error.ml  indicators_config.ml  options.ml  order.ml  runtype.ml  strategy.ml  target.ml  ticker.ml  time.ml
lib/indicators/: config.ml  dune  indicators.ml  tacaml_conv.ml  talib_binding.ml
lib/javascript/: graceful_exit.js  live_button.js
lib/server/: dune  index.ml  longleaf_mutex.ml  plotly.ml  quantstats.py  server.ml  server_old.ml
lib/state/: config.ml  core.ml  dune  longleaf_mutex.ml  longleaf_state.ml  mode.ml  order_record.ml  portfolio_snapshot.ml  position.ml  positions.ml  state.ml  state.mli  stats.ml  stats.mli  v3.ml
lib/util/: astar.ml  dune  json.ml  llm.ml  longleaf_util.ml  lots_of_words.ml  nullable.ml  nullable.mli  pmutex.ml  pmutex.mli  ticker_collections.ml  util.ml  work_pool.ml
react/: .env  .gitignore  OPTIMIZATION_SUMMARY.md  README.md  craco.config.js  flake.nix  longleaf-frontend.scm  package-lock.json  package.json  server.js
react/public/: index.html
react/src/: App.js  App.tsx  index.css  index.js  index.tsx  styles.css
react/src/components/: ChartTab.js  ChartTab.tsx  ControlTab.js  DataTab.js  DataTab.tsx  DataTabOptimized.tsx  OverviewTab.js  OverviewTab.tsx  Sidebar.js  Sidebar.tsx  StrategiesTab.js  StrategiesTab.tsx
react/src/components/common/: DataList.tsx  StatusIndicator.tsx  TabContainer.tsx
react/src/hooks/: useChartData.ts  useServerData.ts
react/src/types/: common.ts  index.ts  react-plotly.js.d.ts
react/src/utils/: README.md  api.js  api.ts  constants.ts  formHelpers.ts  oclFormat.js  oclFormat.ts
scripts/: deploy-frontend.sh
src/: api.ml  backend.ml  backend_position.ml  bars.ml  buy_and_hold.ml  buy_low_bollinger.ml  data.ml  dataframe.ml  double_top.ml  dune  environment.ml  gui.ml  ib.ml  indicators.ml  item.ml  listener.ml  llm.ml  longleaf.ml  longleaf_mutex.ml  lots_of_words.ml  manual.ml  market_data_api.ml  math.ml  monad_experiment.ml  multitemplate.eml.html  options.ml  order_history.ml  parametric_mutex.ml  parametric_mutex.mli  parsing.ml  plotly.ml  pmutex.ml  pmutex.mli  position.ml  python_examples.ml  run.ml  simple_state_machine.ml  state.ml  state_machine.ml  stats.ml  (+11 more)
src/javascript/: backtest_button.js  graceful_exit.js  live_button.js  plotly_graph.js
src/strategies/: dune  listener.ml  strategies.ml
static/: asset-manifest.json  index.html  plotly_graph.js  script.js  single.html
static/static/css/: main.c7c2d370.css
static/static/js/: main.42656847.js.LICENSE.txt
strategies/: adaptive_momentum_regime.ml  astar_example.ml  astar_run.ml  astar_search.ml  battery_runner.ml  buy_and_hold.ml  buy_low_bollinger.ml  candlestick_patterns.ml  challenge1.ml  channel.ml  confirmed_crossover.ml  crossover.ml  crossover_candlestick_strategies.ml  double_top.ml  dune  enumerate.ml  fo_strategy.ml  gadt.ml  gadt_atomic.ml  gadt_examples.ml  gadt_fo.ml  liberated_crossover.ml  listener.ml  longleaf_strategies.ml  lowboll2.ml  macd_bollinger_momentum.ml  monaspa.ml  rsi_mean_reversion.ml  run.ml  scalper.ml  simple_adaptive_regime.ml  simple_state_machine.ml  slow_crossover.ml  spytrader.ml  strategy.ml  template.ml  template_example.ml  template_example2.ml  throwing_crossover.ml  ticker_collections.ml  (+2 more)
strategies/gadt/: dune  enumerate.ml  gadt.ml  gadt_atomic.ml  gadt_examples.ml  gadt_fo.ml  gadt_strategy.ml  groups.ml  mean_reversion.ml  momentum.ml  opening_dip.ml  strategy_library.ml  tech.ml  volume_momentum.ml
strategies/old/: buy_and_hold.ml  buy_low_bollinger.ml  challenge1.ml  double_top.ml  indicators.ml  scalper.ml  spytrader.ml
strategies/template/: dune  longleaf_template.ml
streamlit/: README.md  dashboard.py  new_dashboard.py  requirements.txt
tearsheets/: flake.nix  longleaf-quantstats.scm  quantstats.py  tearsheet_server.py
test/: dune  test.ml
