(library
 (name longleaf_lib)
 (modules :standard)
 (public_name longleaf-lib)
 (instrumentation
  (backend landmarks))
 (libraries
  fmt
  containers
  containers-data
  ptime
  eio_main
  iter
  cmdliner
  landmarks
  owl
  piaf)
 (preprocess
  (pps ppx_deriving.std ppx_yojson_conv ppx_variants_conv ppx_fields_conv ppx_deriving_decoders)))

; landmarks-ppx
; --auto)))

(env
 (_
  (flags
   :standard
   -w
   -32
   -warn-error
   -a+8
   -open
   Containers
   -open
   Ppx_yojson_conv_lib.Yojson_conv.Primitives
   -strict-sequence
   -safe-string)))
