(library
 (name longleaf)
 (modules :standard)
 (public_name longleaf-lib)
 (instrumentation
  (backend landmarks))
 (libraries
  longleaf_core
  longleaf_util
  longleaf_bars
  longleaf_indicators
  longleaf_apis
  longleaf_state
  longleaf_backend
  longleaf_server
  fmt
  containers
  containers-data
  ptime
  eio_main
  iter
  uuidm
  cmdliner
  landmarks
  tacaml
  piaf
  yojson)
 (preprocess
  (pps
   ppx_deriving.std
   ppx_yojson_conv
   ppx_variants_conv
   ppx_fields_conv
   ppx_hash)))

(env
 (_
  (flags
   :standard
   -w
   -32
   -warn-error
   -a+8+49+33
   -open
   Containers
   -open
   Ppx_yojson_conv_lib.Yojson_conv.Primitives
   -strict-sequence
   -safe-string)))
