(library
 (name longleaf)
 (public_name longleaf)
 (libraries
  ; pyml
  ; logs
  fmt
  containers
  containers-data
  ptime
  owl
  dream
  angstrom
  eio_main
  iter
  cmdliner
  tyxml
  landmarks
  piaf)
 (preprocess
  (pps
   ppx_deriving.std
   ppx_yojson_conv
   ppx_variants_conv
   ppx_fields_conv
   landmarks-ppx
   --auto)))

(env
 (_
  (flags
   :standard
   -w
   -32
   -warn-error
   -a+8
   -open
   Containers
   -open
   Ppx_yojson_conv_lib.Yojson_conv.Primitives
   -strict-sequence
   -safe-string)))

(rule
 (targets template.ml)
 (deps template.eml.html)
 (action
  (run dream_eml %{deps} --workspace %{workspace_root})))

(rule
 (targets multitemplate.ml)
 (deps multitemplate.eml.html)
 (action
  (run dream_eml %{deps} --workspace %{workspace_root})))
