(library
 (name longleaf)
 (modules :standard)
 (public_name longleaf)
 (libraries
  fmt
  containers
  containers-data
  ptime
  dream
  eio_main
  iter
  cmdliner
  landmarks
  piaf)
 (preprocess
  (pps ppx_deriving.std ppx_yojson_conv ppx_variants_conv ppx_fields_conv)))

; landmarks-ppx
; --auto)))

(env
 (_
  (flags
   :standard
   -w
   -32
   -warn-error
   -a+8
   -open
   Containers
   -open
   Ppx_yojson_conv_lib.Yojson_conv.Primitives
   -strict-sequence
   -safe-string)))

(rule
 ; (mode
 ;  (promote (until-clean)))
 (targets html_template.ml)
 (deps html_template.eml.html)
 (action
  (run dream_eml %{deps} --workspace %{workspace_root})))
