(library
 (name longleaf_strategies)
 (modules :standard)
 (public_name longleaf-strategies)
 (libraries
  fmt
  longleaf_template
  containers
  longleaf_gadt
  containers-data
  ptime
  eio_main
  iter
  cmdliner
  tacaml
  longleaf-lib
  cohttp
  cohttp-eio)
 (preprocess
  (pps ppx_deriving.std ppx_yojson_conv ppx_variants_conv ppx_fields_conv)))

; 
; --auto)))
;

(env
 (_
  (flags
   :standard
   -w
   -32
   -warn-error
   -a+8+49+33
   -open
   Containers
   ; -open
   ; Longleaf_lib
   -open
   Ppx_yojson_conv_lib.Yojson_conv.Primitives
   -strict-sequence
   -safe-string)))
