(library
 (name longleaf_backend)
 (modules :standard)
 (public_name longleaf-lib.backend)
 ; (instrumentation
 ;  (backend landmarks))
 (libraries
  longleaf_core
  longleaf_util
  longleaf_bars
  longleaf_indicators
  longleaf_state
  longleaf_apis
  fmt
  containers
  containers-data
  ptime
  eio_main
  tls-eio
  x509
  mirage-crypto-rng
  yojson)
 (preprocess
  (pps
   ppx_deriving.std
   ppx_yojson_conv
   ppx_variants_conv
   ppx_fields_conv
   ppx_hash)))

(env
 (_
  (flags
   :standard
   -w
   -32
   -warn-error
   -a+8+49+33
   -open
   Containers
   -open
   Longleaf_core
   -open
   Ppx_yojson_conv_lib.Yojson_conv.Primitives
   -strict-sequence
   -safe-string)))
