(library
 (name longleaf_gadt)
 (modules :standard)
 (public_name longleaf-strategies.gadt)
 (instrumentation
  (backend landmarks))
 (libraries
  longleaf_core
  nlopt
  longleaf_util
  longleaf_indicators
  longleaf_state
  longleaf_template
  fmt
  containers
  containers-data
  ptime
  eio_main
  piaf
  yojson)
 (preprocess
  (pps
   ppx_deriving.std
   ppx_yojson_conv
   ppx_variants_conv
   ppx_fields_conv
   ppx_hash)))

(env
 (_
  (flags
   :standard
   -w
   -32
   -warn-error
   -a+8+49+33
   -open
   Containers
   -open
   Longleaf_core
   -open
   Longleaf_util
   -open
   Ppx_yojson_conv_lib.Yojson_conv.Primitives
   -strict-sequence
   -safe-string)))
